--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <link rel="stylesheet" type="text/css" href="pong.css">
-  </head>
-  <body>
-    <canvas id="pong" width="500" height="500"></canvas>
-    <div id="player1"></div>
-    <div id="player2"></div>
-    <div id="ball"></div>
-    <script src="pong.js"></script>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PONG-BROWSER</title>
+    <link rel="stylesheet" href="./style.css">
+</head>
+<body>
+    <div id="deck">
+        <div id="player1"></div>
+        <div id="player2"></div>
+        <div id="ball"></div>
+    </div>
+   
+   
+    <script src="./basicLogic.js"></script>
+    <script src="./powerBoosts.js"></script>
+
+</body>
+
 </html>
