update Game Logic, Create a simple UI to display Score Board and game over/restart game UI

--- a/index.html
+++ b/index.html
@@ -13,11 +13,17 @@
         <div id="player2"></div>
         <div id="ball"></div>
     </div>
-   
-   
+    <section id="scoreboard-section">
+        <div id="scoreboard"></div>
+        <button id="restart-btn">Restart</button>
+    </section>
+    <section id="game-over-section">
+        <div id="game-over"><h3>Game Over</h3></div>
+        <p id="winner"></p>
+    </section>
     <script src="./basicLogic.js"></script>
     <script src="./powerBoosts.js"></script>
-
+    <script src="./scoreBoard.js"></script>
 </body>
 
 </html>
